@@ -1,3 +1,8 @@
+2006-11-02  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py (ObjectTree._append_internal): Allow
+	specify parents which are objects inserted in the tree.
+
 2006-10-29  Johan Dahlin  <johan@gnome.org>
 
 	* kiwi/datatypes.py:
